modificaciones previas a la entrega

--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -27,49 +27,51 @@
         </nav>
     </header>
     <main>
-        <form class="row g-3">
-            <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="inputEmail4" placeholder="Nombre">
-            </div>
-            <div class="col-md-6">
-                <label for="inputPassword4" class="form-label">Apellido</label>
-                <input type="text" class="form-control" id="inputPassword4" placeholder="Apellido">
-            </div>
-            <div class="col-12">
-                <label for="inputAddress" class="form-label">Email</label>
-                <input type="email" class="form-control" id="inputAddress" placeholder="@tuemail">
-            </div>
-            <div class="col-md-6">
-                <label for="inputCity" class="form-label">Ciudad</label>
-                <input type="text" class="form-control" id="inputCity">
-            </div>
-            <div class="col-md-2">
-                <label for="inputZip" class="form-label">Codigo postal</label>
-                <input type="text" class="form-control" id="inputZip">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Escribinos tu consulta</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-            <div class="col-12">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
-                    <label class="form-check-label" for="gridCheck">
-                        Saber cuando hay promos
-                    </label>
+        <section>
+            <form class="row g-3">
+                <div class="col-md-6">
+                    <label for="inputEmail4" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="inputEmail4" placeholder="Nombre">
                 </div>
-            </div>
-            <div class="col-12">
-                <button type="submit" class="btn btn-success">Enviar</button>
-            </div>
-        </form>
-
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28927.844334644902!2d-71.02008443494879!3d25.000777133253504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89451ab5034cb7ab%3A0xb600ecf3df7aca4d!2sTri%C3%A1ngulo%20de%20las%20Bermudas!5e0!3m2!1ses!2sar!4v1729970323907!5m2!1ses!2sar"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+                <div class="col-md-6">
+                    <label for="inputPassword4" class="form-label">Apellido</label>
+                    <input type="text" class="form-control" id="inputPassword4" placeholder="Apellido">
+                </div>
+                <div class="col-12">
+                    <label for="inputAddress" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="inputAddress" placeholder="@tuemail">
+                </div>
+                <div class="col-md-6">
+                    <label for="inputCity" class="form-label">Ciudad</label>
+                    <input type="text" class="form-control" id="inputCity">
+                </div>
+                <div class="col-md-2">
+                    <label for="inputZip" class="form-label">Codigo postal</label>
+                    <input type="text" class="form-control" id="inputZip">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Escribinos tu consulta</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <div class="col-12">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                        <label class="form-check-label" for="gridCheck">
+                            Saber cuando hay promos
+                        </label>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <button type="submit" class="btn btn-success">Enviar</button>
+                </div>
+            </form>
+        </section>
+        <section class="mapa">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14464.011449899035!2d-71.01029973652373!3d25.000018692766492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89451ab5034cb7ab%3A0xb600ecf3df7aca4d!2sTri%C3%A1ngulo%20de%20las%20Bermudas!5e0!3m2!1ses!2sar!4v1732068637720!5m2!1ses!2sar"
+                width="500" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
     </main>
     <footer><!--Pie de página-->
         <h2>Uribe Glamp</h2>
