corrección de boton de galería

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section class="Galeria"><!--Tercera seccióm-->
             <!--Agregar imagenes destacadas y poner un botón que lleve a la galeria-->
             <h2>Conocé más sobre nosotros y mira nuestra galeria</h2>
-            <a class="btn btn-outline-success" href="./pages/Cabañas.html" role="button">Galeria</a>
+            <a class="btn btn-outline-success" href="./pages/Galeria.html" role="button">Galeria</a>
 
         </section>
         <div class="fixed"><!--Boton que te sigue por la pagina-->
